# douyin-resolver

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: error_handler.py  main.py  rate_limiter.py
apps/api/routes/: health.py  metrics.py  resolve.py
apps/cli/: main.py
apps/web/: index.html  package-lock.json  vite.config.ts
apps/web/src/: App.tsx  index.css
scripts/: phase0_verify.py
static/: index.html
static/assets/: index-B06UvdLJ.js  index-BQZjWEIp.css  index-BW9hkGzz.js
tests/: phase0_result.json  test_phase0.py  test_phase4.py
