[project]
name = "douyin-resolver"
version = "0.1.0"
description = "Douyin Link Resolver — CLI/API/Web tool for parsing public Douyin share links"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
    "typer>=0.12,<1",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[project.scripts]
douyin-resolver = "apps.cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps*", "packages*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
